<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_border"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/steps"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

        <TextView
            android:layout_width="69dp"
            android:layout_height="20dp"
            android:text="@string/points"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

        <TextView
            android:layout_width="69dp"
            android:layout_height="20dp"
            android:text="@string/distance"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@color/white">

        <TextView
            android:id="@+id/Username"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

        <TextView
            android:id="@+id/pointscoun"
            android:layout_width="69dp"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="69dp"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bebasneue_regular"/>

    </LinearLayout>
</LinearLayout>